--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.70.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.11.0",
     "sonner": "^2.0.7",
     "tailwindcss": "^4.1.18",
