--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.11.0",
     "sonner": "^2.0.7",
+    "sweetalert2": "^11.26.17",
     "tailwindcss": "^4.1.18",
     "zod": "^4.3.5"
   },
