--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
     "js-cookie": "^3.0.5",
@@ -18,6 +19,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.70.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.11.0",
     "sonner": "^2.0.7",
     "sweetalert2": "^11.26.17",
