--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.11.0",
+    "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
-    "sweetalert2": "^11.26.17",
+    "sweetalert2": "^11.26.18",
     "tailwindcss": "^4.1.18",
     "zod": "^4.3.5"
   },
